--- a/templates/base.html
+++ b/templates/base.html
@@ -49,8 +49,26 @@
                                 <i class="fas fa-user"></i> {{ current_user.name }}
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="{{ url_for('category') }}">Add Category</a>
                                 <a class="dropdown-item" href="{{ url_for('budget') }}">Issue Budget</a>
                                 <a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a>
+                            </div>
+                        </li>
+
+                         <li class="nav-item dropdown" title="Profile">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-user"></i> {{ session.get('profile_name') }}
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#" id="create-profile">Create Profile</a>
+
+                                {% if profiles|length > 0 %}
+                                    <hr>
+                                    {% for profile in profiles %}
+                                        <a class="dropdown-item" href="{{ url_for('profile', id=profile.id) }}">{{ profile.name }}</a>
+                                    {% endfor %}
+                                {% endif %}
                             </div>
                         </li>
                     {% else %}
@@ -80,7 +98,31 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script>
+        (function () {
+            let cpb = document.getElementById('create-profile');
+            cpb.addEventListener('click', async (event) => {
+                event.preventDefault();
 
+                let profile_name = prompt('Enter Profile Name');
+                if (profile_name) {
+                    const rawResponse = await fetch('{{ url_for("profile") }}', {
+                    method: 'POST',
+                    headers: {
+                      'Accept': 'application/json',
+                      'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({name: profile_name})
+                  });
+                  const content = await rawResponse.json();
+
+                  if (content) {
+                    window.location.reload()
+                  }
+                }
+            })
+        })();
+    </script>
     {#    <script src="/static/js/index.js"></script>#}
     {% block scripts %}{% endblock %}
 </body>
