--- a/templates/CategoryForm.html
+++ b/templates/CategoryForm.html
@@ -16,6 +16,9 @@
                 <div class="form-group">
                     {{ render_field(form.name) }}
                 </div>
+                <div class="form-group">
+                    {{ render_field(form.type) }}
+                </div>
                 <button type="submit" class="btn btn-outline-primary form-control">Submit</button>
             </form>
         </div>
