--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,12 +22,12 @@
         (async function () {
             function getLastDuration(a) {
                 let daysInMonth = 30.436875;
-                const diff = Date.now() - new Date(a);
+                const diff = new Date(a) - new Date("{{ session.get('profile_dob') }}");
                 let years = diff / (365*24*60*60*1000);
                 let month = Math.floor(diff/(24*60*60*1000*daysInMonth))
                 if (years) month = Math.floor(diff/(24*60*60*1000*daysInMonth)) % 12;
                 years = Math.floor(years);
-                return `${years}y ${month}m`;
+                return `age ${years}y ${month}m`;
             }
 
             function generateRandomColor() {
@@ -42,8 +42,10 @@
             const linearModel = tf.sequential();
             linearModel.add(tf.layers.dense({units: 1, inputShape: [1]}));
             linearModel.compile({loss: 'meanSquaredError', optimizer: 'sgd'});
-            const xs = tf.tensor1d([5, 10, 15, .20, .4, .30]);
-            const ys = tf.tensor1d([13, 3, 7, 23, 11, 1]);
+            {#const xs = tf.tensor1d([5, 10, 15, .20, .4, .30]);#}
+            {#const ys = tf.tensor1d([13, 3, 7, 23, 11, 1]);#}
+            const xs = tf.tensor1d([3.2, 4.4, 5.5, 6.71, 6.98, 7.168, 9.779, 6.182, 7.59, 2.16, 7.042, 10.71, 5.313, 7.97, 5.654, 9.7, 3.11]);
+                const ys = tf.tensor1d([1.6, 2.7, 2.9, 3.19, 1.684, 2.53, 3.366, 2.596, 2.53, 1.22, 2.87, 3.45, 1.65, 2.904, 2.42, 2.4, 1.31]);
 
 
             // Train
@@ -65,10 +67,11 @@
                   return getLastDuration(result.issued_on);
               });
 
-
-              let mapModes = results.map(result => result.mode.name);
+                console.log(results)
+              let mapModes = results.map(result => result.mode.type);
               let allModes = [...new Set(mapModes)];
               let datasets = [];
+
               for (let mode of allModes) {
                   let dataset = {};
                   let clr = generateRandomColor();
@@ -76,14 +79,15 @@
                   dataset['backgroundColor'] = clr;
                   dataset['borderColor'] = clr;
                   {#dataset['stack'] = 'combined';#}
-                  dataset['raw'] = results.filter(result => result.mode.name == mode);
+                  dataset['raw'] = results.filter(result => result.mode.type == mode);
+
                   dataset['data'] = dataset['raw'].map(result => {
                       if (result.issued_on)
-                          return {x: getLastDuration(result.issued_on), y: result.amount};
+                          return {x: getLastDuration(result.issued_on), y: result.amount, mode: result.mode};
                   });
 
                     let ndataset = {};
-                    ndataset['type'] = 'bar';
+                    ndataset['type'] = 'line';
                     {#ndataset['stack'] = 'combined';#}
                     ndataset['label'] = `Predicted ${mode}`;
                     let clr1 = generateRandomColor();
@@ -95,36 +99,120 @@
                   if (dataset['data'].length == 1) {
                       let p2d = dataset['data'][0].y;
                       if (p2d < 1) p2d = 1;
-                    const output = linearModel.predict(tf.tensor2d([p2d], [1, 1]));
-                    let prediction = Math.floor(Array.from(output.dataSync())[0])
-                    let obj = {
-                        x: dataset['data'][0].x,
-                        y: prediction
-                    };
-                    legend.push(obj.x);
-                    ndataset['data'].push(obj);
+                    {#const output = linearModel.predict(tf.tensor2d([p2d], [1, 1]));#}
+                    {#let prediction = Math.floor(Array.from(output.dataSync())[0])#}
+
+                      let arr = dataset['data'][0].x.substring(4, dataset['data'][0].x.length - 1).split('y ')
+
+
+                      let crnt_age = arr[0];
+                      arr = arr.map(e => e*2);
+
+                        let age = arr.shift();
+                        let itr_age = age;
+                        console.log('crne age', crnt_age)
+                        while (itr_age > crnt_age) {
+                            const output = linearModel.predict(tf.tensor2d([p2d], [1, 1]));
+                        let prediction = Math.floor(Array.from(output.dataSync())[0])
+                        let obj = {
+                            x: 'age ' + itr_age + 'y',
+                            y: prediction,
+                            mode: dataset['data'][0].mode,
+                            isPredicted: true
+                        };
+                        legend.push(obj.x);
+
+                        ndataset['data'].push(obj);
+                            itr_age -= 5;
+                            p2d = prediction
+                        }
+
+                    {#let obj = {#}
+                    {#    x: 'age ' + arr.shift() + 'y',#}
+                    {#    y: prediction,#}
+                    {#    mode: dataset['data'][0].mode,#}
+                    {#    isPredicted: true#}
+                    {# } #}
+                    {#legend.push(obj.x);#}
+                    {#dataset['data'].push(obj);#}
+                    {#  console.log(obj, dataset['data'])#}
                 } else {
                     let narr = dataset['data'];
-
+                      console.log(narr)
                     for (let val of narr) {
                         let p2d = val.y;
                         if (p2d < 1) p2d = 1;
-                        const output = linearModel.predict(tf.tensor2d([p2d], [1, 1]));
+
+                        let arr = val.x.substring(4, val.x.length - 1).split('y ')
+                        let crnt_age = arr[0];
+                      arr = arr.map(e => e*2);
+
+                        let age = arr.shift();
+                        let itr_age = age;
+                        console.log('crne age', crnt_age)
+                        while (itr_age > crnt_age) {
+                            const output = linearModel.predict(tf.tensor2d([p2d], [1, 1]));
                         let prediction = Math.floor(Array.from(output.dataSync())[0])
                         let obj = {
-                            x: val.x,
-                            y: prediction
+                            x: 'age ' + itr_age + 'y',
+                            y: prediction,
+                            mode: val.mode,
+                            isPredicted: true
                         };
                         legend.push(obj.x);
+
                         ndataset['data'].push(obj);
+                            itr_age -= 5;
+                            p2d = prediction
+                        }
+
                     }
                 }
-
+                     dataset['data'] = dataset['data'].concat(ndataset['data'])
                   datasets.push(dataset)
-                  datasets.push(ndataset)
+                  {#datasets.push(ndataset)#}
               }
 
-                console.log(datasets)
+            datasets.map(dataset => {
+                let res  = dataset['data'].sort((ob1, ob2) => {
+                    if (ob1.x < ob2.x) {
+                        return -1;
+                    }
+                    else if (ob1.x > ob2.x) {
+                        return 1;
+                    } else {
+                        return 0;
+                    }
+                });
+                console.log('res', res)
+                {#dataset['data'] = res;#}
+
+               return dataset;
+            });
+
+              datasets.sort((dt1, dt2) => {
+                  if (dt1['data'][0].y < dt2['data'][0].y) return -1;
+                  else if (dt1['data'][0].y > dt2['data'][0].y) return 1;
+                  else return 0;
+              })
+
+
+
+              legend.sort((f1, f2) => {
+                  if (f1 < f2) {
+                      return -1;
+                  }
+                   else if (f1 > f2) {
+                       return 1;
+                  }
+                  else {
+                      return 0;
+                  }
+              });
+
+              legend = legend.filter(function(item, pos, self) {
+                return self.indexOf(item) == pos;
+                })
 
                 const data = {
                   datasets
@@ -135,9 +223,7 @@
                   data: data,
                   options: {
                       scales: {
-                          y: {
-                            stacked: true
-                          }
+
                         },
 
                         plugins: {
@@ -150,8 +236,13 @@
                               footer: (tooltipItems) => {
                                   let returnable = '';
                                   tooltipItems.forEach(tti => {
-                                      if(tti.dataset.label.includes('Predicted')) {
-                                          returnable = "In Next " + tti.label
+
+                                      if(tti.dataset.label.includes('Predicted') || !!tti.raw.isPredicted) {
+                                          returnable = "Predicted " + tti.raw.mode.type + " on " + tti.raw.mode.name + " at " + tti.label
+                                      }
+
+                                      else {
+                                          returnable = tti.raw.mode.type + " on " + tti.raw.mode.name + " at " + tti.label
                                       }
                                   })
                                   return returnable;
