--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -42,10 +42,11 @@
             const linearModel = tf.sequential();
             linearModel.add(tf.layers.dense({units: 1, inputShape: [1]}));
             linearModel.compile({loss: 'meanSquaredError', optimizer: 'sgd'});
-            {#const xs = tf.tensor1d([5, 10, 15, .20, .4, .30]);#}
-            {#const ys = tf.tensor1d([13, 3, 7, 23, 11, 1]);#}
-            const xs = tf.tensor1d([3.2, 4.4, 5.5, 6.71, 6.98, 7.168, 9.779, 6.182, 7.59, 2.16, 7.042, 10.71, 5.313, 7.97, 5.654, 9.7, 3.11]);
-                const ys = tf.tensor1d([1.6, 2.7, 2.9, 3.19, 1.684, 2.53, 3.366, 2.596, 2.53, 1.22, 2.87, 3.45, 1.65, 2.904, 2.42, 2.4, 1.31]);
+
+            const xs = tf.tensor2d([30.2, 26.4, 49.5, 12.71, 16.98], [5,1]);
+            const ys = tf.tensor2d([0.2,0.65, 0.29, 0.4, 0.7], [5,1]);
+            {#const xs = tf.tensor2d([3.2, 4.4, 5.5, 6.71, 6.98], [1,1]);#}
+            {#    const ys = tf.tensor2d([1.6, 2.7, 2.9, 3.19, 1.684], [1,1]);#}
 
 
             // Train
@@ -71,10 +72,14 @@
               let mapModes = results.map(result => result.mode.type);
               let allModes = [...new Set(mapModes)];
               let datasets = [];
-
+                let itrm = 0;
               for (let mode of allModes) {
+                  ++itrm;
+                  let clr = "#0f0";
                   let dataset = {};
-                  let clr = generateRandomColor();
+                  if (itrm == 1) {
+                      clr = "#00f";
+                  }
                   dataset['label'] = mode;
                   dataset['backgroundColor'] = clr;
                   dataset['borderColor'] = clr;
@@ -114,6 +119,7 @@
                         while (itr_age > crnt_age) {
                             const output = linearModel.predict(tf.tensor2d([p2d], [1, 1]));
                         let prediction = Math.floor(Array.from(output.dataSync())[0])
+                            if (prediction < 0) prediction *= -1;
                         let obj = {
                             x: 'age ' + itr_age + 'y',
                             y: prediction,
@@ -153,6 +159,7 @@
                         while (itr_age > crnt_age) {
                             const output = linearModel.predict(tf.tensor2d([p2d], [1, 1]));
                         let prediction = Math.floor(Array.from(output.dataSync())[0])
+                            if (prediction < 0) prediction *= -1;
                         let obj = {
                             x: 'age ' + itr_age + 'y',
                             y: prediction,
@@ -190,14 +197,52 @@
                return dataset;
             });
 
-              datasets.sort((dt1, dt2) => {
+
+
+                let nworth_data = [];
+
+                if (datasets[0].mode == 'expense') {
+                    nworth_data = datasets[0]['data'].map((dt, idx) => {
+                        return {
+                            x: dt.x,
+                            y: dt.y - datasets[1]['data'][idx].y,
+                            mode: {type: 'net worth', name: 'calculating (income - expense)'},
+                            isPredicted: true
+                        }
+                    })
+                } else {
+                    nworth_data = datasets[1]['data'].map((dt, idx) => {
+                        return {
+                            x: dt.x,
+                            y: dt.y - datasets[0]['data'][idx].y,
+                            mode: {type: 'net worth', name: 'calculating (income - expense)'},
+                            isPredicted: true
+                        }
+                    })
+                }
+
+                let nworth_clr = '#000';
+
+                if (nworth_clr > 0) {
+                    nworth_clr = '#f00';
+                }
+
+                let nworth_dtst = {
+                  label: 'net worth',
+                  backgroundColor: nworth_clr,
+                  borderColor: nworth_clr,
+                    data: nworth_data
+                }
+
+                datasets.push(nworth_dtst)
+
+
+
+                datasets.sort((dt1, dt2) => {
                   if (dt1['data'][0].y < dt2['data'][0].y) return -1;
                   else if (dt1['data'][0].y > dt2['data'][0].y) return 1;
                   else return 0;
               })
-
-
-
               legend.sort((f1, f2) => {
                   if (f1 < f2) {
                       return -1;
